--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -107,7 +107,7 @@
               <li class="nav-item">
                 <a
                   class="nav-link navbar-text rounded-3"
-                  href="/references.html"
+                  href="references.html"
                   >Refernces</a
                 >
               </li>
@@ -126,7 +126,7 @@
       <div class="row g-4 mt-3 mx-auto">
         <div class="col-lg-7 col-md-10 col-sm-12 col-xs-12 mx-auto">
           <div class="card">
-            <img src="Images/project2.png" class="card-img-top" alt="..." />
+            <img src="../Images/project2.png" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Mkshoof for e-commerce</h5>
               <hr />
@@ -190,7 +190,7 @@
         </div>
         <div class="col-lg-7 col-md-10 col-sm-12 col-xs-12 mx-auto">
           <div class="card">
-            <img src="Images/Project1.png" class="card-img-top" alt="..." />
+            <img src="../Images/Project1.png" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">HTML and CSS Project</h5>
               <hr />
@@ -251,7 +251,7 @@
         </div>
         <div class="col-lg-7 col-md-10 col-sm-12 col-xs-12 mx-auto">
           <div class="card">
-            <img src="Images/project3.png" class="card-img-top" alt="..." />
+            <img src="../Images/project3.png" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Chocolate kisses boxes</h5>
               <hr />
@@ -315,7 +315,7 @@
         </div>
         <div class="col-lg-7 col-md-10 col-sm-12 col-xs-12 mx-auto">
           <div class="card">
-            <img src="Images/project4.png" class="card-img-top" alt="..." />
+            <img src="../Images/project4.png" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Italian restaurant</h5>
               <hr />
