--- a/Pages/resume.html
+++ b/Pages/resume.html
@@ -107,7 +107,7 @@
               <li class="nav-item">
                 <a
                   class="nav-link navbar-text rounded-3"
-                  href="/references.html"
+                  href="references.html"
                   >Refernces</a
                 >
               </li>
@@ -133,7 +133,7 @@
         <button class="btn button-custom" type="button">
           <i class="bi bi-download"></i>
           <a
-            href="Files/Asad Maraqa CV.pdf"
+            href="../Files/Asad_Maraqa_CV_2022.pdf"
             class="text-decoration-none button-custom"
           >
             CV PDF</a
@@ -142,7 +142,7 @@
         <button class="btn button-custom" type="button">
           <i class="bi bi-download"></i>
           <a
-            href="Files/Asad Maraqa CV.docx"
+            href="../Files/Asad_Maraqa_CV_2022.docx"
             class="text-decoration-none button-custom"
             >CV word
           </a>
