--- a/index.html
+++ b/index.html
@@ -74,44 +74,44 @@
               </li>
               <!--Here are the other button for the navbar I hidden them because they are all the same as home-->
               <li class="nav-item">
-                <a class="nav-link navbar-text rounded-3" href="about.html"
+                <a class="nav-link navbar-text rounded-3" href="pages/about.html"
                   >About</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link navbar-text rounded-3" href="Skills.html"
+                <a class="nav-link navbar-text rounded-3" href="pages/Skills.html"
                   >Skills</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link navbar-text rounded-3" href="education.html"
+                <a class="nav-link navbar-text rounded-3" href="pages/education.html"
                   >Education</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link navbar-text rounded-3" href="projects.html"
+                <a class="nav-link navbar-text rounded-3" href="pages/projects.html"
                   >Projects</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link navbar-text rounded-3" href="resume.html"
+                <a class="nav-link navbar-text rounded-3" href="pages/resume.html"
                   >Resume</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link navbar-text rounded-3" href="gallery.html"
+                <a class="nav-link navbar-text rounded-3" href="pages/gallery.html"
                   >Gallery</a
                 >
               </li>
               <li class="nav-item">
                 <a
                   class="nav-link navbar-text rounded-3"
-                  href="/references.html"
+                  href="pages/references.html"
                   >Refernces</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link navbar-text rounded-3" href="contact.html"
+                <a class="nav-link navbar-text rounded-3" href="pages/contact.html"
                   >contact</a
                 >
               </li>
