--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -105,7 +105,7 @@
               <li class="nav-item">
                 <a
                   class="nav-link navbar-text rounded-3"
-                  href="/references.html"
+                  href="references.html"
                   >Refernces</a
                 >
               </li>
