--- a/Pages/education.html
+++ b/Pages/education.html
@@ -107,7 +107,7 @@
               <li class="nav-item">
                 <a
                   class="nav-link navbar-text rounded-3"
-                  href="/references.html"
+                  href="references.html"
                   >Refernces</a
                 >
               </li>
