--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -107,7 +107,7 @@
               <li class="nav-item">
                 <a
                   class="nav-link navbar-text rounded-3"
-                  href="/references.html"
+                  href="references.html"
                   >Refernces</a
                 >
               </li>
@@ -161,16 +161,16 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="Images/slide1.jpg" class="d-block w-100" alt="..." />
+            <img src="../Images/slide1.jpg" class="d-block w-100" alt="..." />
           </div>
           <div class="carousel-item">
-            <img src="Images/slide2.jpg" class="d-block w-100" alt="..." />
+            <img src="../Images/slide2.jpg" class="d-block w-100" alt="..." />
           </div>
           <div class="carousel-item">
-            <img src="Images/slide3.jpg" class="d-block w-100" alt="..." />
+            <img src="../Images/slide3.jpg" class="d-block w-100" alt="..." />
           </div>
           <div class="carousel-item">
-            <img src="Images/slide4.jpg" class="d-block w-100" alt="..." />
+            <img src="../Images/slide4.jpg" class="d-block w-100" alt="..." />
           </div>
         </div>
         <button
