--- a/Pages/references.html
+++ b/Pages/references.html
@@ -94,7 +94,7 @@
               <li class="nav-item">
                 <a
                   class="nav-link navbar-text rounded-3 active"
-                  href="/references.html"
+                  href="references.html"
                   >Refernces</a
                 >
               </li>
